--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.13.0",
     "scss-loader": "0.0.1",
     "vue": "^2.5.2",
-    "vue-quill-editor": "^3.0.6"
+    "vue-quill-editor": "^3.0.6",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
