--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "scss-loader": "0.0.1",
     "vue": "^2.5.2",
-    "vue-quill-editor": "^3.0.6",
+    "vue-quill-editor": "^3.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
